--- a/Languages/Russian/DefInjected/ThingDef/Races_Animal_BlindDogs.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_Animal_BlindDogs.xml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
- <BlindDog.label>Слепая собака</BlindDog.label>
-<BlindDog.description>Одинокие собаки не так уж опасны, но их стаи — настоящая заноза в заднице. Они нападают только если голодны... плохо то, что они почти всегда голодны. Если вы столкнулись с целой стаей, постарайтесь снять их с возвышенности, иначе они просто вас переедут.</BlindDog.description>
-<BlindDog.tools.0.label>левая лапа</BlindDog.tools.0.label>
-<BlindDog.tools.1.label>правая лапа</BlindDog.tools.1.label>
-<BlindDog.tools.3.label>голова</BlindDog.tools.3.label>
+  <BlindDog.label>Слепая собака</BlindDog.label>
+  <BlindDog.description>Слепые псы — одни из самых слабых мутантов Зоны. Тем не менее, крупная стая может представлять опасность. Основного логова у них нет, они кочуют по пустырям, свалкам, ложбинам. Иногда стая может обосноваться в конкретном месте и охранять эту территорию (такая стая живёт перед Баром). Охота проходит скоординировано, всей стаей. Псы окружают жертву и нападают со всех сторон. Поодиночке пугливы, часто убегают подальше от противника. Из-за природного родства слепые псы часто охотятся вместе с Псевдособаками. Охотно нападают на всех, кто мельче их, например, на тушканов. Плотей и кабанов загоняют стаями. Зомби и снорков обходят подальше. Вынужденно воюют с кровососами и псевдогигантами.</BlindDog.description>
+  <BlindDog.tools.0.label>левая лапа</BlindDog.tools.0.label>
+  <BlindDog.tools.1.label>правая лапа</BlindDog.tools.1.label>
+  <BlindDog.tools.3.label>голова</BlindDog.tools.3.label>
+
 
 </LanguageData>
