--- a/Languages/English/DefInjected/HediffDef/Hediffs _BlindDogs.xml
+++ b/Languages/English/DefInjected/HediffDef/Hediffs _BlindDogs.xml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <AbnormalFeeling.label>Аномальное чутьё</AbnormalFeeling.label>
-  <AbnormalFeeling.description>Если Зона что-то забрала, она оставляет что-то взамен.</AbnormalFeeling.description>
+  <AbnormalFeeling.label>Abnormal Feeling</AbnormalFeeling.label>
+  <AbnormalFeeling.description>If the Zone takes something, it leaves something in return.</AbnormalFeeling.description>
+
 
 </LanguageData>
