--- a/Languages/English/DefInjected/PawnKindDef/Races_Animal_BlindDogs.xml
+++ b/Languages/English/DefInjected/PawnKindDef/Races_Animal_BlindDogs.xml
@@ -1,80 +1,80 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <BlindDogWhite.label>BlindDogWhite</BlindDogWhite.label>
-  <BlindDogWhite.labelPlural>BlindDogWhites</BlindDogWhite.labelPlural>
-  <BlindDogWhite.lifeStages.0.label>BlindDogWhite</BlindDogWhite.lifeStages.0.label>
-  <BlindDogWhite.lifeStages.0.labelPlural>BlindDogWhite</BlindDogWhite.lifeStages.0.labelPlural>
-  <BlindDogWhite.lifeStages.0.labelMale>male BlindDogWhite</BlindDogWhite.lifeStages.0.labelMale>
-  <BlindDogWhite.lifeStages.0.labelMalePlural>male BlindDogWhites</BlindDogWhite.lifeStages.0.labelMalePlural>
-  <BlindDogWhite.lifeStages.0.labelFemale>female BlindDogWhite</BlindDogWhite.lifeStages.0.labelFemale>
-  <BlindDogWhite.lifeStages.0.labelFemalePlural>female BlindDogWhites</BlindDogWhite.lifeStages.0.labelFemalePlural>
-  <BlindDogWhite.lifeStages.1.label>BlindDogWhite</BlindDogWhite.lifeStages.1.label>
-  <BlindDogWhite.lifeStages.1.labelPlural>BlindDogWhite</BlindDogWhite.lifeStages.1.labelPlural>
-  <BlindDogWhite.lifeStages.1.labelMale>male BlindDogWhite</BlindDogWhite.lifeStages.1.labelMale>
-  <BlindDogWhite.lifeStages.1.labelMalePlural>male BlindDogWhites</BlindDogWhite.lifeStages.1.labelMalePlural>
-  <BlindDogWhite.lifeStages.1.labelFemale>female BlindDogWhite</BlindDogWhite.lifeStages.1.labelFemale>
-  <BlindDogWhite.lifeStages.1.labelFemalePlural>female BlindDogWhites</BlindDogWhite.lifeStages.1.labelFemalePlural>
-  <BlindDogWhite.lifeStages.2.label>BlindDogWhite</BlindDogWhite.lifeStages.2.label>
-  <BlindDogWhite.lifeStages.2.labelPlural>BlindDogWhite</BlindDogWhite.lifeStages.2.labelPlural>
-  <BlindDogWhite.lifeStages.2.labelMale>male BlindDogWhite</BlindDogWhite.lifeStages.2.labelMale>
-  <BlindDogWhite.lifeStages.2.labelMalePlural>male BlindDogWhites</BlindDogWhite.lifeStages.2.labelMalePlural>
-  <BlindDogWhite.lifeStages.2.labelFemale>female BlindDogWhite</BlindDogWhite.lifeStages.2.labelFemale>
-  <BlindDogWhite.lifeStages.2.labelFemalePlural>female BlindDogWhites</BlindDogWhite.lifeStages.2.labelFemalePlural>
-  <BlindDogWhite.labelMale>male BlindDogWhite</BlindDogWhite.labelMale>
-  <BlindDogWhite.labelMalePlural>male BlindDogWhites</BlindDogWhite.labelMalePlural>
-  <BlindDogWhite.labelFemale>female BlindDogWhite</BlindDogWhite.labelFemale>
-  <BlindDogWhite.labelFemalePlural>female BlindDogWhites</BlindDogWhite.labelFemalePlural>
+  <BlindDogWhite.label>Blind Dog</BlindDogWhite.label>
+  <BlindDogWhite.labelPlural>Blind Dogs</BlindDogWhite.labelPlural>
+  <BlindDogWhite.lifeStages.0.label>Blind Dog</BlindDogWhite.lifeStages.0.label>
+  <BlindDogWhite.lifeStages.0.labelPlural>Blind Dog</BlindDogWhite.lifeStages.0.labelPlural>
+  <BlindDogWhite.lifeStages.0.labelMale>Blind Dog</BlindDogWhite.lifeStages.0.labelMale>
+  <BlindDogWhite.lifeStages.0.labelMalePlural>Blind Dogs</BlindDogWhite.lifeStages.0.labelMalePlural>
+  <BlindDogWhite.lifeStages.0.labelFemale>Blind Dog</BlindDogWhite.lifeStages.0.labelFemale>
+  <BlindDogWhite.lifeStages.0.labelFemalePlural>Blind Dogs</BlindDogWhite.lifeStages.0.labelFemalePlural>
+  <BlindDogWhite.lifeStages.1.label>Blind Dog</BlindDogWhite.lifeStages.1.label>
+  <BlindDogWhite.lifeStages.1.labelPlural>Blind Dog</BlindDogWhite.lifeStages.1.labelPlural>
+  <BlindDogWhite.lifeStages.1.labelMale>Blind Dog</BlindDogWhite.lifeStages.1.labelMale>
+  <BlindDogWhite.lifeStages.1.labelMalePlural>Blind Dogs</BlindDogWhite.lifeStages.1.labelMalePlural>
+  <BlindDogWhite.lifeStages.1.labelFemale>Blind Dog</BlindDogWhite.lifeStages.1.labelFemale>
+  <BlindDogWhite.lifeStages.1.labelFemalePlural>Blind Dogs</BlindDogWhite.lifeStages.1.labelFemalePlural>
+  <BlindDogWhite.lifeStages.2.label>Blind Dog</BlindDogWhite.lifeStages.2.label>
+  <BlindDogWhite.lifeStages.2.labelPlural>Blind Dog</BlindDogWhite.lifeStages.2.labelPlural>
+  <BlindDogWhite.lifeStages.2.labelMale>Blind Dog</BlindDogWhite.lifeStages.2.labelMale>
+  <BlindDogWhite.lifeStages.2.labelMalePlural>Blind Dogs</BlindDogWhite.lifeStages.2.labelMalePlural>
+  <BlindDogWhite.lifeStages.2.labelFemale>Blind Dog</BlindDogWhite.lifeStages.2.labelFemale>
+  <BlindDogWhite.lifeStages.2.labelFemalePlural>Blind Dogs</BlindDogWhite.lifeStages.2.labelFemalePlural>
+  <BlindDogWhite.labelMale>Blind Dog</BlindDogWhite.labelMale>
+  <BlindDogWhite.labelMalePlural>Blind Dogs</BlindDogWhite.labelMalePlural>
+  <BlindDogWhite.labelFemale>Blind Dog</BlindDogWhite.labelFemale>
+  <BlindDogWhite.labelFemalePlural>Blind Dogs</BlindDogWhite.labelFemalePlural>
 
-  <BlindDogBrown.label>BlindDogBrown</BlindDogBrown.label>
-  <BlindDogBrown.labelPlural>BlindDogBrowns</BlindDogBrown.labelPlural>
-  <BlindDogBrown.lifeStages.0.label>BlindDogBrown</BlindDogBrown.lifeStages.0.label>
-  <BlindDogBrown.lifeStages.0.labelPlural>BlindDogBrown</BlindDogBrown.lifeStages.0.labelPlural>
-  <BlindDogBrown.lifeStages.0.labelMale>male BlindDogBrown</BlindDogBrown.lifeStages.0.labelMale>
-  <BlindDogBrown.lifeStages.0.labelMalePlural>male BlindDogBrowns</BlindDogBrown.lifeStages.0.labelMalePlural>
-  <BlindDogBrown.lifeStages.0.labelFemale>female BlindDogBrown</BlindDogBrown.lifeStages.0.labelFemale>
-  <BlindDogBrown.lifeStages.0.labelFemalePlural>female BlindDogBrowns</BlindDogBrown.lifeStages.0.labelFemalePlural>
-  <BlindDogBrown.lifeStages.1.label>BlindDogBrown</BlindDogBrown.lifeStages.1.label>
-  <BlindDogBrown.lifeStages.1.labelPlural>BlindDogBrown</BlindDogBrown.lifeStages.1.labelPlural>
-  <BlindDogBrown.lifeStages.1.labelMale>male BlindDogBrown</BlindDogBrown.lifeStages.1.labelMale>
-  <BlindDogBrown.lifeStages.1.labelMalePlural>male BlindDogBrowns</BlindDogBrown.lifeStages.1.labelMalePlural>
-  <BlindDogBrown.lifeStages.1.labelFemale>female BlindDogBrown</BlindDogBrown.lifeStages.1.labelFemale>
-  <BlindDogBrown.lifeStages.1.labelFemalePlural>female BlindDogBrowns</BlindDogBrown.lifeStages.1.labelFemalePlural>
-  <BlindDogBrown.lifeStages.2.label>BlindDogBrown</BlindDogBrown.lifeStages.2.label>
-  <BlindDogBrown.lifeStages.2.labelPlural>BlindDogBrown</BlindDogBrown.lifeStages.2.labelPlural>
-  <BlindDogBrown.lifeStages.2.labelMale>male BlindDogBrown</BlindDogBrown.lifeStages.2.labelMale>
-  <BlindDogBrown.lifeStages.2.labelMalePlural>male BlindDogBrowns</BlindDogBrown.lifeStages.2.labelMalePlural>
-  <BlindDogBrown.lifeStages.2.labelFemale>female BlindDogBrown</BlindDogBrown.lifeStages.2.labelFemale>
-  <BlindDogBrown.lifeStages.2.labelFemalePlural>female BlindDogBrowns</BlindDogBrown.lifeStages.2.labelFemalePlural>
-  <BlindDogBrown.labelMale>male BlindDogBrown</BlindDogBrown.labelMale>
-  <BlindDogBrown.labelMalePlural>male BlindDogBrowns</BlindDogBrown.labelMalePlural>
-  <BlindDogBrown.labelFemale>female BlindDogBrown</BlindDogBrown.labelFemale>
-  <BlindDogBrown.labelFemalePlural>female BlindDogBrowns</BlindDogBrown.labelFemalePlural>
+  <BlindDogBrown.label>Blind Dog</BlindDogBrown.label>
+  <BlindDogBrown.labelPlural>Blind Dogs</BlindDogBrown.labelPlural>
+  <BlindDogBrown.lifeStages.0.label>Blind Dog</BlindDogBrown.lifeStages.0.label>
+  <BlindDogBrown.lifeStages.0.labelPlural>Blind Dog</BlindDogBrown.lifeStages.0.labelPlural>
+  <BlindDogBrown.lifeStages.0.labelMale>Blind Dog</BlindDogBrown.lifeStages.0.labelMale>
+  <BlindDogBrown.lifeStages.0.labelMalePlural>Blind Dogs</BlindDogBrown.lifeStages.0.labelMalePlural>
+  <BlindDogBrown.lifeStages.0.labelFemale>Blind Dog</BlindDogBrown.lifeStages.0.labelFemale>
+  <BlindDogBrown.lifeStages.0.labelFemalePlural>Blind Dogs</BlindDogBrown.lifeStages.0.labelFemalePlural>
+  <BlindDogBrown.lifeStages.1.label>Blind Dog</BlindDogBrown.lifeStages.1.label>
+  <BlindDogBrown.lifeStages.1.labelPlural>Blind Dog</BlindDogBrown.lifeStages.1.labelPlural>
+  <BlindDogBrown.lifeStages.1.labelMale>Blind Dog</BlindDogBrown.lifeStages.1.labelMale>
+  <BlindDogBrown.lifeStages.1.labelMalePlural>Blind Dogs</BlindDogBrown.lifeStages.1.labelMalePlural>
+  <BlindDogBrown.lifeStages.1.labelFemale>Blind Dog</BlindDogBrown.lifeStages.1.labelFemale>
+  <BlindDogBrown.lifeStages.1.labelFemalePlural>Blind Dogs</BlindDogBrown.lifeStages.1.labelFemalePlural>
+  <BlindDogBrown.lifeStages.2.label>Blind Dog</BlindDogBrown.lifeStages.2.label>
+  <BlindDogBrown.lifeStages.2.labelPlural>Blind Dog</BlindDogBrown.lifeStages.2.labelPlural>
+  <BlindDogBrown.lifeStages.2.labelMale>Blind Dog</BlindDogBrown.lifeStages.2.labelMale>
+  <BlindDogBrown.lifeStages.2.labelMalePlural>Blind Dogs</BlindDogBrown.lifeStages.2.labelMalePlural>
+  <BlindDogBrown.lifeStages.2.labelFemale>Blind Dog</BlindDogBrown.lifeStages.2.labelFemale>
+  <BlindDogBrown.lifeStages.2.labelFemalePlural>Blind Dogs</BlindDogBrown.lifeStages.2.labelFemalePlural>
+  <BlindDogBrown.labelMale>Blind Dog</BlindDogBrown.labelMale>
+  <BlindDogBrown.labelMalePlural>Blind Dogs</BlindDogBrown.labelMalePlural>
+  <BlindDogBrown.labelFemale>Blind Dog</BlindDogBrown.labelFemale>
+  <BlindDogBrown.labelFemalePlural>Blind Dogs</BlindDogBrown.labelFemalePlural>
 
-  <BlindDogOrange.label>BlindDogOrange</BlindDogOrange.label>
-  <BlindDogOrange.labelPlural>BlindDogOranges</BlindDogOrange.labelPlural>
-  <BlindDogOrange.lifeStages.0.label>BlindDogOrange</BlindDogOrange.lifeStages.0.label>
-  <BlindDogOrange.lifeStages.0.labelPlural>BlindDogOrange</BlindDogOrange.lifeStages.0.labelPlural>
-  <BlindDogOrange.lifeStages.0.labelMale>male BlindDogOrange</BlindDogOrange.lifeStages.0.labelMale>
-  <BlindDogOrange.lifeStages.0.labelMalePlural>male BlindDogOranges</BlindDogOrange.lifeStages.0.labelMalePlural>
-  <BlindDogOrange.lifeStages.0.labelFemale>female BlindDogOrange</BlindDogOrange.lifeStages.0.labelFemale>
-  <BlindDogOrange.lifeStages.0.labelFemalePlural>female BlindDogOranges</BlindDogOrange.lifeStages.0.labelFemalePlural>
-  <BlindDogOrange.lifeStages.1.label>BlindDogOrange</BlindDogOrange.lifeStages.1.label>
-  <BlindDogOrange.lifeStages.1.labelPlural>BlindDogOrange</BlindDogOrange.lifeStages.1.labelPlural>
-  <BlindDogOrange.lifeStages.1.labelMale>male BlindDogOrange</BlindDogOrange.lifeStages.1.labelMale>
-  <BlindDogOrange.lifeStages.1.labelMalePlural>male BlindDogOranges</BlindDogOrange.lifeStages.1.labelMalePlural>
-  <BlindDogOrange.lifeStages.1.labelFemale>female BlindDogOrange</BlindDogOrange.lifeStages.1.labelFemale>
-  <BlindDogOrange.lifeStages.1.labelFemalePlural>female BlindDogOranges</BlindDogOrange.lifeStages.1.labelFemalePlural>
-  <BlindDogOrange.lifeStages.2.label>BlindDogOrange</BlindDogOrange.lifeStages.2.label>
-  <BlindDogOrange.lifeStages.2.labelPlural>BlindDogOrange</BlindDogOrange.lifeStages.2.labelPlural>
-  <BlindDogOrange.lifeStages.2.labelMale>male BlindDogOrange</BlindDogOrange.lifeStages.2.labelMale>
-  <BlindDogOrange.lifeStages.2.labelMalePlural>male BlindDogOranges</BlindDogOrange.lifeStages.2.labelMalePlural>
-  <BlindDogOrange.lifeStages.2.labelFemale>female BlindDogOrange</BlindDogOrange.lifeStages.2.labelFemale>
-  <BlindDogOrange.lifeStages.2.labelFemalePlural>female BlindDogOranges</BlindDogOrange.lifeStages.2.labelFemalePlural>
-  <BlindDogOrange.labelMale>male BlindDogOrange</BlindDogOrange.labelMale>
-  <BlindDogOrange.labelMalePlural>male BlindDogOranges</BlindDogOrange.labelMalePlural>
-  <BlindDogOrange.labelFemale>female BlindDogOrange</BlindDogOrange.labelFemale>
-  <BlindDogOrange.labelFemalePlural>female BlindDogOranges</BlindDogOrange.labelFemalePlural>
+  <BlindDogOrange.label>Blind Dog</BlindDogOrange.label>
+  <BlindDogOrange.labelPlural>Blind Dogs</BlindDogOrange.labelPlural>
+  <BlindDogOrange.lifeStages.0.label>Blind Dog</BlindDogOrange.lifeStages.0.label>
+  <BlindDogOrange.lifeStages.0.labelPlural>Blind Dog</BlindDogOrange.lifeStages.0.labelPlural>
+  <BlindDogOrange.lifeStages.0.labelMale>Blind Dog</BlindDogOrange.lifeStages.0.labelMale>
+  <BlindDogOrange.lifeStages.0.labelMalePlural>Blind Dogs</BlindDogOrange.lifeStages.0.labelMalePlural>
+  <BlindDogOrange.lifeStages.0.labelFemale>Blind Dog</BlindDogOrange.lifeStages.0.labelFemale>
+  <BlindDogOrange.lifeStages.0.labelFemalePlural>Blind Dogs</BlindDogOrange.lifeStages.0.labelFemalePlural>
+  <BlindDogOrange.lifeStages.1.label>Blind Dog</BlindDogOrange.lifeStages.1.label>
+  <BlindDogOrange.lifeStages.1.labelPlural>Blind Dog</BlindDogOrange.lifeStages.1.labelPlural>
+  <BlindDogOrange.lifeStages.1.labelMale>Blind Dog</BlindDogOrange.lifeStages.1.labelMale>
+  <BlindDogOrange.lifeStages.1.labelMalePlural>Blind Dogs</BlindDogOrange.lifeStages.1.labelMalePlural>
+  <BlindDogOrange.lifeStages.1.labelFemale>Blind Dog</BlindDogOrange.lifeStages.1.labelFemale>
+  <BlindDogOrange.lifeStages.1.labelFemalePlural>Blind Dogs</BlindDogOrange.lifeStages.1.labelFemalePlural>
+  <BlindDogOrange.lifeStages.2.label>Blind Dog</BlindDogOrange.lifeStages.2.label>
+  <BlindDogOrange.lifeStages.2.labelPlural>Blind Dog</BlindDogOrange.lifeStages.2.labelPlural>
+  <BlindDogOrange.lifeStages.2.labelMale>Blind Dog</BlindDogOrange.lifeStages.2.labelMale>
+  <BlindDogOrange.lifeStages.2.labelMalePlural>Blind Dogs</BlindDogOrange.lifeStages.2.labelMalePlural>
+  <BlindDogOrange.lifeStages.2.labelFemale>Blind Dog</BlindDogOrange.lifeStages.2.labelFemale>
+  <BlindDogOrange.lifeStages.2.labelFemalePlural>Blind Dogs</BlindDogOrange.lifeStages.2.labelFemalePlural>
+  <BlindDogOrange.labelMale>Blind Dog</BlindDogOrange.labelMale>
+  <BlindDogOrange.labelMalePlural>Blind Dogs</BlindDogOrange.labelMalePlural>
+  <BlindDogOrange.labelFemale>Blind Dog</BlindDogOrange.labelFemale>
+  <BlindDogOrange.labelFemalePlural>Blind Dogs</BlindDogOrange.labelFemalePlural>
 
 
 </LanguageData>
