--- a/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
+++ b/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <STLKR_FeralZombie.label>дикий зомби</STLKR_FeralZombie.label>
-  <STLKR_FeralZombie.description>Трупы, оживленные микроскопическими архитами. Шамблеры медлительны, безмозглы и будут беспощадно атаковать. Если их не поймать, шамблеры умирают от метаболического истощения через несколько дней.</STLKR_FeralZombie.description>
+  <STLKR_FeralZombie.description>Бедные души, подвергшиеся длительному облучению в Янтаре и некоторых других сильно зараженных секторах. Неосторожные сталкеры сходили с ума и превращались в ходячие трупы.</STLKR_FeralZombie.description>
 
 
 </LanguageData>
