--- a/Languages/Russian/DefInjected/ThingDef/Items_Various.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Items_Various.xml
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <Meat_Tark.label>Мясо Тарка</Meat_Tark.label>
-  <Meat_Tark.description>Мясо Тарка — Несмотря на внешний вид, относится к категории еды. Если все же решили это съесть, то лучше предварительно поджарить, термообработка несколько снижает негативные последствия.</Meat_Tark.description>
+  <Meat_mutant.label>Мясо мутанта</Meat_mutant.label>
+  <Meat_mutant.description>Мясо мутанта - Несмотря на свой внешний вид, оно считается пищей. Если вы решили его съесть, лучше сначала поджарить, термическая обработка несколько снижает негативные последствия.</Meat_mutant.description>
 
+
+  <!--<Meat_Tark.label>Мясо Тарка</Meat_Tark.label>-->
+  <!--<Meat_Tark.description>Мясо Тарка — Несмотря на внешний вид, относится к категории еды. Если все же решили это съесть, то лучше предварительно поджарить, термообработка несколько снижает негативные последствия.</Meat_Tark.description>-->
 
 </LanguageData>
