--- a/Languages/English/DefInjected/HediffDef/Hediffs.xml
+++ b/Languages/English/DefInjected/HediffDef/Hediffs.xml
@@ -13,5 +13,8 @@
   <AbnormalRegeneration.label>Abnormal regeneration</AbnormalRegeneration.label>
   <AbnormalRegeneration.description>Regeneration-This ability makes it difficult to kill a bloodsucker. Their regeneration is high in itself compared to other living creatures, and foreign blood only speeds it up. The main feature is the combination of invisibility and regeneration - when the bloodsucker is invisible, regeneration is higher, and the damage received is weaker..</AbnormalRegeneration.description>
 
+  <Fear.label>primordial horror</Fear.label>
+  <Fear.description>Primordial horror of the monster.</Fear.description>
+
 
 </LanguageData>
