--- a/Languages/Russian/DefInjected/HediffDef/Hediffs.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs.xml
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <STLKR_ConsumedAnimalHemogen.label>потребляемый животный гемоген</STLKR_ConsumedAnimalHemogen.label>
+  <STLKR_ConsumedAnimalHemogen.label>Потребляемый животный гемоген</STLKR_ConsumedAnimalHemogen.label>
   <STLKR_ConsumedAnimalHemogen.description>Животный гемоген значительно увеличивает регенерацию и боевые возможности питателя, но временно жертвует способностью общаться с другими.</STLKR_ConsumedAnimalHemogen.description>
 
-  <STLKR_ConsumedCorpseHemogen.label>потребляемый трупный гемоген</STLKR_ConsumedCorpseHemogen.label>
+  <STLKR_ConsumedCorpseHemogen.label>Потребляемый трупный гемоген</STLKR_ConsumedCorpseHemogen.label>
   <STLKR_ConsumedCorpseHemogen.description>Трупный гемоген не может полностью удовлетворить питателя, но на некоторое время сойдет.</STLKR_ConsumedCorpseHemogen.description>
 
-  <STLKR_ConsumedSanguophageHemogen.label>потребляемый сангуофаг гемоген</STLKR_ConsumedSanguophageHemogen.label>
+  <STLKR_ConsumedSanguophageHemogen.label>Потребляемый сангуофаг гемоген</STLKR_ConsumedSanguophageHemogen.label>
   <STLKR_ConsumedSanguophageHemogen.description>Гемоген Sanguophage дает питателю мощный импульс ко всем возможностям.</STLKR_ConsumedSanguophageHemogen.description>
 
-  <AbnormalRegeneration.label>Abnormal regeneration</AbnormalRegeneration.label>
-  <AbnormalRegeneration.description>Regeneration-This ability makes it difficult to kill a bloodsucker. Their regeneration is high in itself compared to other living creatures, and foreign blood only speeds it up. The main feature is the combination of invisibility and regeneration - when the bloodsucker is invisible, regeneration is higher, and the damage received is weaker..</AbnormalRegeneration.description>
+  <AbnormalRegeneration.label>Аномальная регенерация</AbnormalRegeneration.label>
+  <AbnormalRegeneration.description>Регенерация - Эта способность затрудняет убийство кровососа. Их регенерация сама по себе высока по сравнению с другими живыми существами, а чужая кровь только ускоряет ее. Главной особенностью является сочетание невидимости и регенерации - когда кровосос невидим, регенерация выше, а получаемый урон слабее.</AbnormalRegeneration.description>
+
+  <Fear.label>Первобытный ужас</Fear.label>
+<Fear.description>Первобытный ужас от монстра.</Fear.description>
 
 
 </LanguageData>
