--- a/Languages/English/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
+++ b/Languages/English/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
   <STLKR_FeralZombie.label>feral zombie</STLKR_FeralZombie.label>
-  <STLKR_FeralZombie.description>Poor souls subjected to prolonged exposure in Yantar and a few other heavily radiated sectors. Careless stalkers gone mad and turned into walking corpses.</STLKR_FeralZombie.description>
+  <STLKR_FeralZombie.description>Corpses reanimated by microscopic archites. Shamblers are slow, mindless, and will attack relentlessly. Unless captured, shamblers die from metabolic exhaustion after several days.</STLKR_FeralZombie.description>
 
 
 </LanguageData>
